2009-06-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MultiScaleImage.cs: Use correct event handler type to prevent
	casting exceptions.

2009-06-10  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: If the ItemsControl is populating from its
	  ItemsSource, we don't set the logical parent. Fixes drt 880.

2009-06-09  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Implement IsSelectionBoxHighlighted and prevent
	  drt 555 from timing out.

2009-06-04  Alan McGovern  <amcgovern@novell.com>

	* Control.cs: Calling Focus () should result in a recursive Focus.

2009-06-03  Andreia Gaita  <avidigal@novell.com>

	* StackPanel.cs: (MeasureOverride) Children Measure should be called
	with Infinity on width or height depending on the orientation

2009-05-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MediaElement.cs:
	* Image.cs: Create a ExceptionRoutedEventArgs with default/TODO
	  values, prevents a lot of the MS tests from throwing NRE and
	  timing out.

2009-05-27  Alan McGovern  <amcgovern@novell.com>

	* Control.cs: Control.Enabled needs to be created in native
	  code as it's required for hittesting. A disabled control and
	  its visual children do not receive mouse events and are not
	  visible to VisualTreeHelper.FindElementInHostCoordinates.

2009-05-26  Alan McGovern  <amcgovern@novell.com>

	* TextBox.cs: Add missing VisualState transitions to TextBox.

2009-05-22  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs
	* ContentPresenter.cs
	* Control.cs
	* ItemsControl.cs
	* StackPanel.cs:
	Use DependencyProperty.RegisterCore for these DPs.

2009-05-21  Jackson Harper  <jackson@ximian.com>

	* ComboBox.cs: Cleanup debug spew so it doesn't cause a crash when
	non FrameworkElement objects are added to the combo box.

2009-05-21  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: Add the required VisualState changes to
	PasswordBox.
	
2009-05-21  Alan McGovern  <amcgovern@novell.com>
